secret_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: secret-keeper
  namespace: secure
spec:
  containers:
  - name: busybox
    image: busybox:latest
    command: ['sh', '-c', 'echo $SECRET_STUFF; sleep 3600']
