security_context_pod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lando
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: lando
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: lando
    spec:
      containers:
      - command:
        - sh
        - -c
        - while true; do sleep 3600; done
        image: busybox:stable
        imagePullPolicy: IfNotPresent
        name: busybox
        resources: {}
        securityContext:
          allowPrivilegeEscalation: true
          runAsUser: 2727
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
