ambassador_example.yml
apiVersion: v1
kind: Service
metadata:
	name: api-svc
	namespace: default
spec:  
	ports:
	- port: 8181 #  {name: Prashant, age: 18}
      protocol: TCP
      targetPort: 80
    selector:
        app: api
    type: ClusterIP
---
apiVersion: v1
kind: Pod
metadata:
  name: client
  namespace: default
spec:
  containers:
  - name: main
    image: radial/busyboxplus:curl
    command: ['sh', '-c', 'while true; do curl -m 3 localhost:7171; sleep 5; done']
  - name: ambassador
    image: haproxy:2.4
    volumeMounts:
    - name: haproxy-config
      mountPath: /usr/local/etc/haproxy/
  volumes:
  - name: haproxy-config
    configMap:
      name: haproxy-config
