mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
# definition/configuration for pod
  template:
    metadata:
      labels:
        app: mongodb
# blueprint of pod e.g., pod_name, port_number
    spec:
      containers:
      - name: mongodb
        image: mongo #image on container registry to full
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
